--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,83 @@
-html, body {
-    height: 100%;
+html {
+    width: 98%;
+    margin: auto;
     background-color: #F6F6F6;
+}
+.logo {
+    margin: 10px 0px;
+    width: 200px;
+}
+.container {
+position: relative;
+text-align: center;
+color: white;
+margin-top: 15px;
+}
+.title {
+background-image: url('background.jpg');
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center center;
+border-radius: 35px;
+display: flex;
+align-items: center;
+width: 90vw;
+height: 75vh;
+margin: 5px;
+padding: 5px;
+}
+.footer {
+background-image: url('background.jpg');
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center center;
+border-radius: 35px;
+display: flex;
+align-items: center;
+width: 50vw;
+height: 35vh;
+margin: 45px 5px;
+padding: 5px;
+}
+.grey {
+color: grey;
+}
+.center {
+    margin: auto;
+    text-align: center;
+}
+.template {
+    width: 50%;
+}
+.carousel-inner img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
+.margin {
+    margin-bottom: 25px;
+}
+h6.thick {
+    font-weight: bold;
+    color: grey;
+}
+.width {
+    margin: auto;
+    width: 70% !important;
+}
+
+@media (max-width: 768px) {
+    .width {
+        margin: auto;
+        width: 100% !important;
+    }
+}
+
+.carousel-control-prev-icon {
+    background-color: black !important;
+}
+
+.carousel-control-next-icon {
+    background-color: black !important;
 }
