--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,13 @@
-html {
+html{
     width: 98%;
     margin: auto;
-    background-color: #F6F6F6;
 }
 .logo {
     margin: 10px 0px;
     width: 200px;
+}
+h1, h2, h3, h4, h5, h6, p {
+    font-family: 'Crimson Text';
 }
 .container {
 position: relative;
